--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-crud",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -19,7 +20,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
+    "@types/validator": "^13.7.10",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
